Update dashra.html 2

--- a/dashra.html
+++ b/dashra.html
@@ -126,7 +126,7 @@
     </div>
     <h1>HAPPY
         <br>DASHRA
-        <br> ALL MY FAMILIY & FRIENDS
+        <br> ALL MY FAMILIY and FRIENDS
     </h1>
 </body>
 </html>
